[package]
name = "sessions_test"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.84"
base64 = "0.22.1"
chrono = "0.4.39"
rmp-serde = "1.3.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_json = "1.0.134"
surrealdb = "2.1.4"
time = { version = "0.3.37", features = ["formatting", "parsing"] }
tokio = "1.42.0"
tower-sessions = "0.14.0"
# tower-sessions-core = "0.14.0"
